[tool.poetry]
name = "sb-django-htmx"
version = "0.1.0"
description = ""
authors = ["PabloLec <pablo.lecolinet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
requests = "^2.31.0"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
